se corrigen funcionalidades con js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     ></script>
     <script src="https://unpkg.com/scrollreveal@4.0.9/dist/scrollreveal.min.js"></script>
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Proyecto Integrador - Etapa 1 | Inicio</title>
   </head>
   <body>
