errores detectados y corregidos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -145,8 +145,7 @@
                   aria-expanded="false"
                 >
                   <i class="fa-solid fa-cart-shopping fa-xl hvr-pop"></i>
-                  <span id="carrito-numero">4</span>
-                  <!-- TODO: Cambiar con JS -->
+                  <span id="carrito-contador"></span>
                 </a>
                 <ul id="carrito" class="dropdown-menu mx-2">
                   <table id="lista-carrito" class="table">
